Fixed classroom link display on smaller screens

--- a/classroom/assets/css/main.css
+++ b/classroom/assets/css/main.css
@@ -1756,7 +1756,9 @@ i.line_height34 {
         width: 100%;
         max-width: 100%;
     }
+}
 
+@media (max-width: 900px) {
     #classroom-info {
         flex-wrap: wrap;
         width: 100%;
